2008-01-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/xingheader/gstxingmux.c: (generate_xing_header):
	Bitrate is 4 bits, not 8 so check for 0xe as maximum value instead
	of 0xfe.

2008-01-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/xingheader/gstxingmux.c: (generate_xing_header):
	Remove accidentially leftover debug printf.

2008-01-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/xingheader/gstxingmux.c: (has_xing_header),
	(generate_xing_header), (gst_xing_mux_chain),
	(gst_xing_mux_sink_event):
	Choose smallest possible frame size for the Xing header, properly
	set the timestamp, duration and offset on the outgoing buffers,
	only send NEWSEGMENT events in BYTE format downstream and also
	drop VBRI headers if already existing.

2008-01-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/xingheader/Makefile.am:
	* gst/xingheader/gstxingmux.c: (parse_header), (get_xing_offset),
	(has_xing_header), (generate_xing_header),
	(gst_xing_mux_base_init), (gst_xing_mux_finalize), (xing_reset),
	(gst_xing_mux_init), (gst_xing_mux_chain),
	(gst_xing_mux_sink_event), (gst_xing_mux_change_state):
	* gst/xingheader/gstxingmux.h:
	Major cleanup and rewrite of xingmux with less bugs and new features:
	- Handles other layers as 3
	- Write TOC

2008-01-11  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/elements/rganalysis.c: (test_buffer_const_float_mono),
	  (test_buffer_const_float_stereo), (test_buffer_const_int16_mono),
	  (test_buffer_const_int16_stereo), (test_buffer_square_float_mono),
	  (test_buffer_square_float_stereo), (test_buffer_square_int16_mono),
	  (test_buffer_square_int16_stereo):
	* tests/check/elements/rglimiter.c: (create_test_buffer):
	* tests/check/elements/rgvolume.c: (test_buffer_new):
	  It's "endianness", not "endianess". Fixes unit tests.

2008-01-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c: (gst_rtp_session_clock_rate):